--- a/backend/database/pom.xml
+++ b/backend/database/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.datazuul.webapps.datacenter.backend</groupId>
     <version>1.0-SNAPSHOT</version>
     
-    <name>com.datazuul.webapps.datacenter.backend.impl.jpa</name>
+    <name>datazuul.com - DataZuul DataCenter (Backend IMPL JPA)</name>
     
     <dependencies>
         <dependency>
