--- a/business/pom.xml
+++ b/business/pom.xml
@@ -10,7 +10,7 @@
     
     <artifactId>business</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>com.datazuul.webapps.datacenter.business</name>
+    <name>datazuul.com - DataZuul DataCenter (Business)</name>
     
     <dependencies>
         <dependency>
