--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>frontend</artifactId>
     <version>1.0-SNAPSHOT</version>
     
-    <name>com.datazuul.webapps.datacenter.frontend</name>
+    <name>datazuul.com - DataZuul DataCenter (Frontend)</name>
     
     <packaging>pom</packaging>
     
