--- a/frontend/webgui/pom.xml
+++ b/frontend/webgui/pom.xml
@@ -10,7 +10,7 @@
     
     <artifactId>webgui</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>com.datazuul.webapps.datacenter.frontend.webgui</name>
+    <name>datazuul.com - DataZuul DataCenter (Frontend IMPL Web)</name>
     
     <packaging>war</packaging>
 
